# RL-assignments

./: .gitignore  README.md
Assignment1/: main.py
Assignment1/notebooks/: main.ipynb
Assignment2/: main.ipynb  main.py  plots_and_more.ipynb
Assignment2/report/: commands.tex  main.aux  main.tex
Assignment3/: README.md  pyproject.toml
Assignment3/jacob_our_saviour/: mcts_jakub.ipynb
Assignment3/nb/: joke.py  main copy.ipynb  main.ipynb  plotting-game-states.ipynb
Assignment3/src/connect_four/: __init__.py  __main__.py  environment.py  game.py  game_board.py  gameplay.py  mcts.py  node.py  run.py  utils.py
Assignment3/tests/: gameboard_tests.py
ConnectFour/src/ConnectFour/: mcts.py
product_sell/: README.md  main.ipynb  main.py
product_sell/notebooks/: main.ipynb
